--- a/index.html
+++ b/index.html
@@ -9,12 +9,25 @@
 </head>
 
 <body>
-  <header role="banner"></header>
-  <div id="logo">
-    <img src="logo.png" alt=""Sasquatch Records>
-  </div>
-  <h1>Sasquatch Records</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, non laboriosam quisquam adipisci officia quasi, tenetur commodi, numquam hic excepturi necessitatibus ipsam temporibus velit. Reiciendis repudiandae molestiae ratione ea dolor?</p>
+  <header role="banner">
+    <div id="logo">
+      <img src="logo.png" alt="" Sasquatch Records>
+    </div>
+    <h1>Sasquatch Records</h1>
+  </header>
+  <nav>
+    <ul>
+      <li><a href="">Home</a>
+      </li>
+      <li><a href="">About</a>
+      </li>
+      <li><a href="">Portfolio</a>
+      </li>
+    </ul>
+  </nav>
+  <section class="main">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt vitae tempore ut quam pariatur nobis cum harum nihil aliquam iure odio consequatur, numquam distinctio, magnam minima maxime aspernatur est. Quaerat!</p>
+  </section>
 </body>
 
 </html>
