tested with colors

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
 
   <header role="banner">
-    <div id="logo">
+<!--     <div id="logo">
       <img src="logo.png" alt="" Sasquatch Records>
-    </div>
-    <h1>Sasquatch Records</h1>
+    </div> -->
+    <h1>abc</h1>
   </header>
 
-  <nav>
+<!--   <nav>
     <ul>
       <li><a href="">Home</a>
       </li>
@@ -26,17 +26,16 @@
       <li><a href="">Portfolio</a>
       </li>
     </ul>
-  </nav>
+  </nav> -->
 
   <article class="news">
     <section class="main">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt vitae tempore ut quam pariatur nobis cum harum nihil aliquam iure odio consequatur, numquam distinctio, magnam minima maxime aspernatur est. Quaerat. Lorem ipsum dolor sit.</p>
     </section>
-
-  </article>
-
-  <article class="colors">
-    <section class="secondary">
+    <section class="color">
+      <div class="primary"></div>
+      <div class="secondary"></div>
+      <div class="tertiary"></div>
     </section>
   </article>
 
