--- a/index.html
+++ b/index.html
@@ -11,37 +11,22 @@
 <body>
 
   <header role="banner">
-<!--     <div id="logo">
-      <img src="logo.png" alt="" Sasquatch Records>
-    </div> -->
-    <h1>abc</h1>
+    <h1>Sedgwick Richardson</h1>
   </header>
 
-<!--   <nav>
-    <ul>
-      <li><a href="">Home</a>
-      </li>
-      <li><a href="">About</a>
-      </li>
-      <li><a href="">Portfolio</a>
-      </li>
-    </ul>
-  </nav> -->
+  <div class="content-wrapper">
 
-  <article class="news">
-    <section class="main">
-      <h2>Lorem ipsum dolor sit</h2>
-      <h3>Lorem ipsum dolor sit</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt vitae tempore ut quam pariatur nobis cum harum nihil aliquam <a href="#">iure odio consequatur</a>, numquam distinctio, magnam minima maxime aspernatur est. Quaerat. Lorem ipsum dolor sit.</p>
-      <h2>Lorem ipsum dolor sit</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt vitae tempore ut quam pariatur nobis cum harum nihil aliquam iure odio consequatur, numquam distinctio, magnam minima maxime aspernatur est. Quaerat. Lorem ipsum dolor sit.</p>
-    </section>
-    <section class="color">
-      <div class="primary"></div>
-      <div class="secondary"></div>
-      <div class="tertiary"></div>
-    </section>
-  </article>
+    <article class="news">
+      <section class="main">
+        <h2>Lorem ipsum dolor sit</h2>
+        <h3>Lorem ipsum dolor sit</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt vitae tempore ut quam pariatur nobis cum harum nihil aliquam <a href="#">iure odio consequatur</a>, numquam distinctio, magnam minima maxime aspernatur est. Quaerat. Lorem ipsum dolor sit.</p>
+        <h2>Lorem ipsum dolor sit</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt vitae tempore ut quam pariatur nobis cum harum nihil aliquam iure odio consequatur, numquam distinctio, magnam minima maxime aspernatur est. Quaerat. Lorem ipsum dolor sit.</p>
+      </section>
+    </article>
+    
+  </div>
 
 </body>
 
