--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <h3>Branding</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt vitae tempore ut quam pariatur nobis cum harum nihil aliquam <a href="#">iure odio consequatur</a>, numquam distinctio, magnam minima maxime aspernatur est. Quaerat. Lorem ipsum dolor sit.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt vitae tempore ut quam pariatur nobis cum harum nihil aliquam <a href="#">iure odio consequatur</a>, numquam distinctio, magnam minima maxime aspernatur est. Quaerat. Lorem ipsum dolor sit.</p>
+      </section>
+      <section class="second">
         <h3>Who we are</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt vitae tempore ut quam pariatur nobis cum harum nihil aliquam <a href="#">iure odio consequatur</a>, numquam distinctio, magnam minima maxime aspernatur est. Quaerat. Lorem ipsum dolor sit.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt vitae tempore ut quam pariatur nobis cum harum nihil aliquam <a href="#">iure odio consequatur</a>, numquam distinctio, magnam minima maxime aspernatur est. Quaerat. Lorem ipsum dolor sit.</p>
