--- a/index.html
+++ b/index.html
@@ -14,19 +14,37 @@
     <h1>Sedgwick Richardson</h1>
   </header>
 
-  <div class="content-wrapper">
+  <div class="wrap">
 
     <article class="news">
-      <section class="main">
+      <section class="content">
+        <h2>What we do</h2>
+        <h3>Branding</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt vitae tempore ut quam pariatur nobis cum harum nihil aliquam <a href="#">iure odio consequatur</a>, numquam distinctio, magnam minima maxime aspernatur est. Quaerat. Lorem ipsum dolor sit.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt vitae tempore ut quam pariatur nobis cum harum nihil aliquam <a href="#">iure odio consequatur</a>, numquam distinctio, magnam minima maxime aspernatur est. Quaerat. Lorem ipsum dolor sit.</p>
         <h2>What we do</h2>
         <h3>Branding</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt vitae tempore ut quam pariatur nobis cum harum nihil aliquam <a href="#">iure odio consequatur</a>, numquam distinctio, magnam minima maxime aspernatur est. Quaerat. Lorem ipsum dolor sit.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt vitae tempore ut quam pariatur nobis cum harum nihil aliquam <a href="#">iure odio consequatur</a>, numquam distinctio, magnam minima maxime aspernatur est. Quaerat. Lorem ipsum dolor sit.</p>
       </section>
-      <section class="second">
+      <section class="sidebar">
         <h3>Who we are</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt vitae tempore ut quam pariatur nobis cum harum nihil aliquam <a href="#">iure odio consequatur</a>, numquam distinctio, magnam minima maxime aspernatur est. Quaerat. Lorem ipsum dolor sit.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt vitae tempore ut quam pariatur nobis cum harum nihil aliquam <a href="#">iure odio consequatur</a>, numquam distinctio, magnam minima maxime aspernatur est. Quaerat. Lorem ipsum dolor sit.</p>
+      </section>
+      <section class="social">
+        <ul>
+          <li class="social__list-item">1</li>
+          <li class="social__list-item">2</li>
+          <li class="social__list-item">3</li>
+          <li class="social__list-item">4</li>
+          <li class="social__list-item">5</li>
+          <li class="social__list-item">6</li>
+          <li class="social__list-item">7</li>
+          <li class="social__list-item">8</li>
+          <li class="social__list-item">9</li>
+          <li class="social__list-item">0</li>
+        </ul>
       </section>
     </article>
 
