--- a/index.html
+++ b/index.html
@@ -9,47 +9,65 @@
 </head>
 
 <body>
-
-  <header role="banner">
-    <h1>Sedgwick Richardson</h1>
+  <header class="site-header">
+    <div class="wrap">
+      <div class="logo"><a href="#">Logo</a></div>
+      <nav>
+        <ul>
+          <li><a href="#">item01</a></li>
+          <li><a href="#">item02</a></li>
+          <li><a href="#">item03</a></li>
+          <li><a href="#">item04</a></li>
+          <li><a href="#">item05</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <div class="wrap">
-
-    <article class="news">
-      <section class="content">
-        <h2>What we do</h2>
-        <h3>Branding</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt vitae tempore ut quam pariatur nobis cum harum nihil aliquam <a href="#">iure odio consequatur</a>, numquam distinctio, magnam minima maxime aspernatur est. Quaerat. Lorem ipsum dolor sit.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt vitae tempore ut quam pariatur nobis cum harum nihil aliquam <a href="#">iure odio consequatur</a>, numquam distinctio, magnam minima maxime aspernatur est. Quaerat. Lorem ipsum dolor sit.</p>
-        <h2>What we do</h2>
-        <h3>Branding</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt vitae tempore ut quam pariatur nobis cum harum nihil aliquam <a href="#">iure odio consequatur</a>, numquam distinctio, magnam minima maxime aspernatur est. Quaerat. Lorem ipsum dolor sit.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt vitae tempore ut quam pariatur nobis cum harum nihil aliquam <a href="#">iure odio consequatur</a>, numquam distinctio, magnam minima maxime aspernatur est. Quaerat. Lorem ipsum dolor sit.</p>
-      </section>
-      <section class="sidebar">
-        <h3>Who we are</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt vitae tempore ut quam pariatur nobis cum harum nihil aliquam <a href="#">iure odio consequatur</a>, numquam distinctio, magnam minima maxime aspernatur est. Quaerat. Lorem ipsum dolor sit.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt vitae tempore ut quam pariatur nobis cum harum nihil aliquam <a href="#">iure odio consequatur</a>, numquam distinctio, magnam minima maxime aspernatur est. Quaerat. Lorem ipsum dolor sit.</p>
-      </section>
-      <section class="social">
-        <ul>
-          <li class="social__list-item">1</li>
-          <li class="social__list-item">2</li>
-          <li class="social__list-item">3</li>
-          <li class="social__list-item">4</li>
-          <li class="social__list-item">5</li>
-          <li class="social__list-item">6</li>
-          <li class="social__list-item">7</li>
-          <li class="social__list-item">8</li>
-          <li class="social__list-item">9</li>
-          <li class="social__list-item">0</li>
+  <div class="site-inner">
+    <div class="wrap">
+      <main class="content">
+        <h2>Gallery Content</h2>
+        <ul class="gallery">
+          <li class="gallery__item"><img src="http://www.placehold.it/300x300" alt=""></li>
+          <li class="gallery__item"><img src="http://www.placehold.it/300x300" alt=""></li>
+          <li class="gallery__item"><img src="http://www.placehold.it/300x300" alt=""></li>
+          <li class="gallery__item"><img src="http://www.placehold.it/300x300" alt=""></li>
+          <li class="gallery__item"><img src="http://www.placehold.it/300x300" alt=""></li>
+          <li class="gallery__item"><img src="http://www.placehold.it/300x300" alt=""></li>
+          <li class="gallery__item"><img src="http://www.placehold.it/300x300" alt=""></li>
+          <li class="gallery__item"><img src="http://www.placehold.it/300x300" alt=""></li>
+          <li class="gallery__item"><img src="http://www.placehold.it/300x300" alt=""></li>
+          <li class="gallery__item"><img src="http://www.placehold.it/300x300" alt=""></li>
+          <li class="gallery__item"><img src="http://www.placehold.it/300x300" alt=""></li>
+          <li class="gallery__item"><img src="http://www.placehold.it/300x300" alt=""></li>
+          <li class="gallery__item"><img src="http://www.placehold.it/300x300" alt=""></li>
+          <li class="gallery__item"><img src="http://www.placehold.it/300x300" alt=""></li>
+          <li class="gallery__item"><img src="http://www.placehold.it/300x300" alt=""></li>
         </ul>
-      </section>
-    </article>
+      </main>
 
+      <aside class="sidebar">
+        <h2>Sidebar</h2>
+        <ul>
+          <li><a href="#">A link to someplace else</a></li>
+          <li><a href="#">A link to someplace else</a></li>
+          <li><a href="#">A link to someplace else</a></li>
+          <li><a href="#">A link to someplace else</a></li>
+          <li><a href="#">A link to someplace else</a></li>
+        </ul>
+      </aside>
+    </div>
   </div>
 
+  <footer class="site-footer">
+    <div class="wrap">
+      <div class="widget"><h2>Widget</h2></div>
+      <div class="widget"><h2>Widget</h2></div>
+      <div class="widget"><h2>Widget</h2></div>
+      <div class="widget"><h2>Widget</h2></div>
+    </div>
+  </footer>
 </body>
 
 </html>
